--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,7 @@
                                 </div>
                                 <small class="text-muted">Data Engineering</small>
                             </div>
+                            </div>
                         </div>
                     </div>
                 </div>
